--- a/SQlite.Tests.WindowsPhone/SQlite.Tests.WindowsPhone.csproj
+++ b/SQlite.Tests.WindowsPhone/SQlite.Tests.WindowsPhone.csproj
@@ -9,8 +9,8 @@
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SQlite.Tests.WindowsPhone</RootNamespace>
-    <AssemblyName>SQlite.Tests.WindowsPhone</AssemblyName>
+    <RootNamespace>SQLite.Tests.WindowsPhone</RootNamespace>
+    <AssemblyName>SQLite.Tests.WindowsPhone</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -161,7 +161,6 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="LocalizedStrings.cs" />
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
