Changed Assembly name to SQLite. All platform instances of this should match.

--- a/SQLite.WindowsPhone/SQLite.WindowsPhone.csproj
+++ b/SQLite.WindowsPhone/SQLite.WindowsPhone.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SQLite.WindowsPhone</RootNamespace>
-    <AssemblyName>SQLite.WindowsPhone</AssemblyName>
+    <AssemblyName>SQLite</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
