--- a/SQLite.WindowsPhone/SQLite.WindowsPhone.csproj
+++ b/SQLite.WindowsPhone/SQLite.WindowsPhone.csproj
@@ -112,7 +112,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\BitcoinMobile\Bitlet\sqlite-net-wp8\Sqlite.vcxproj">
+    <ProjectReference Include="..\sqlite-net-wp8\Sqlite.vcxproj">
       <Project>{59B35F6C-E062-4F0E-88D8-13F3F82A24F3}</Project>
       <Name>Sqlite</Name>
     </ProjectReference>
